force-app/main/default/objects/Webservice__c/Webservice__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings criado para construção das APIs.</description>
    <label>Webservice</label>
</CustomObject>