force-app/main/default/objects/Webservice__c/fields/AltEndpoint__c.field-meta.xml
<CustomField>
    <fullName>AltEndpoint__c</fullName>
    <label>AltEndpoint</label>
    <type>Url</type>
</CustomField>