force-app/main/default/objects/Webservice__c/fields/AppKey__c.field-meta.xml
<CustomField>
    <fullName>AppKey__c</fullName>
    <label>App Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>