force-app/main/default/objects/Webservice__c/fields/AsyncLogServiceTransaction__c.field-meta.xml
<CustomField>
    <fullName>AsyncLogServiceTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso o campo esteja marcado, o log na Service Transaction será feito de maneira assíncrona.</description>
    <label>Log assíncrono na service transaction</label>
    <type>Checkbox</type>
</CustomField>