force-app/main/default/objects/Webservice__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <label>Certificado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>