force-app/main/default/objects/Webservice__c/fields/CommitTransactionsList__c.field-meta.xml
<CustomField>
    <fullName>CommitTransactionsList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salvar logs em lista</label>
    <type>Checkbox</type>
</CustomField>