force-app/main/default/objects/Webservice__c/fields/ExpireIn__c.field-meta.xml
<CustomField>
    <fullName>ExpireIn__c</fullName>
    <label>Expire In</label>
    <type>Date</type>
</CustomField>