force-app/main/default/objects/Webservice__c/fields/HasAuthToken__c.field-meta.xml
<CustomField>
    <fullName>HasAuthToken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui Token de Autenticação</label>
    <type>Checkbox</type>
</CustomField>