force-app/main/default/objects/Webservice__c/fields/HasJWT__c.field-meta.xml
<CustomField>
    <fullName>HasJWT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui JWT</label>
    <type>Checkbox</type>
</CustomField>