force-app/main/default/objects/Webservice__c/fields/LogServiceTransaction__c.field-meta.xml
<CustomField>
    <fullName>LogServiceTransaction__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Caso esse campo esteja marcado como true, será salvo o log da operação na Service Transaction.</description>
    <label>Salvar log de service transaction</label>
    <type>Checkbox</type>
</CustomField>