force-app/main/default/objects/Webservice__c/fields/ServiceAccountUser__c.field-meta.xml
<CustomField>
    <fullName>ServiceAccountUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Account User</label>
    <type>Checkbox</type>
</CustomField>