force-app/main/default/objects/Webservice__c/fields/ServiceOperation__c.field-meta.xml
<CustomField>
    <fullName>ServiceOperation__c</fullName>
    <label>Operação de Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>