force-app/main/default/objects/Webservice__c/fields/ServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>ServiceProvider__c</fullName>
    <label>Provedor de serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>