force-app/main/default/objects/Webservice__c/fields/SubscriptionKey__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionKey__c</fullName>
    <label>Subscription Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>