force-app/main/default/objects/Webservice__c/fields/switchedOn__c.field-meta.xml
<CustomField>
    <fullName>switchedOn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ligado</label>
    <type>Checkbox</type>
</CustomField>