force-app/main/default/objects/Webservice__c/fields/Validate__c.field-meta.xml
<CustomField>
    <fullName>Validate__c</fullName>
    <label>Validade dos dados da consulta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>