force-app/main/default/objects/Webservice__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Versão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>