force-app/main/default/objects/Webservice__c/listViews/WebServices.listView-meta.xml
<ListView>
    <fullName>WebServices</fullName>
    <columns>NAME</columns>
    <columns>Endpoint__c</columns>
    <columns>Certificate__c</columns>
    <filterScope>Everything</filterScope>
    <label>WebServices</label>
    <language>en_US</language>
</ListView>